Fixes horizontal scroll bar issue

--- a/style.scss
+++ b/style.scss
@@ -2,7 +2,6 @@ body {
   margin: 0px;
   padding: 0px;
   font-family: 'Roboto', sans-serif;
-  width: 100vw;
   // header
   .header {
     background-color: #12171d;
@@ -716,7 +715,7 @@ body {
     position: fixed;
     z-index: 100;
     bottom: 2%;
-    right: 2%;
+    right: 1%;
     margin: auto;
     max-width: 540px;
     display: -ms-flexbox;
